--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,3 +56,33 @@ jobs:
                   skript_repo_ref: 2.10.2
                   extra_plugins_directory: extra-plugins/
                   run_vanilla_tests: 'true' # temporarily disable due to vanilla Skript tests failing
+    skriptTestVanillaa:
+        runs-on: ubuntu-latest
+        needs: [ build ]
+        steps:
+            - uses: actions/checkout@v4
+            - name: Set up JDK 21
+              uses: actions/setup-java@v4
+              with:
+                  java-version: '21'
+                  distribution: 'adopt'
+                  cache: gradle
+            - name: Grant execute permission
+              run: chmod +x gradlew
+            - name: Build Environment
+              run: ./gradlew clean quickTestVanilla
+    skriptTest:
+        runs-on: ubuntu-latest
+        needs: [ build ]
+        steps:
+            - uses: actions/checkout@v4
+            - name: Set up JDK 21
+              uses: actions/setup-java@v4
+              with:
+                  java-version: '21'
+                  distribution: 'adopt'
+                  cache: gradle
+            - name: Grant execute permission
+              run: chmod +x gradlew
+            - name: Build Environment
+              run: ./gradlew clean quickTest
